# todo-rust

./: Cargo.toml  readme.md  todos.json
src/: main.rs
src/application/use_cases/: todo_service.rs
src/domain/entities/: todo.rs
src/domain/repositories/: todo_repository.rs
src/infra/persistence/: json_storage.rs
src/infra/repositories/: json_todo_repository.rs  mod.rs
src/presentation/cli/: mod.rs  todo_cli.rs
